--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_test_task">
    <application
-        android:label="flutter_test_task"
+        android:label="Random Color Generator"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
